--- a/arch/arm64/configs/chiron_defconfig
+++ b/arch/arm64/configs/chiron_defconfig
@@ -659,6 +659,8 @@ CONFIG_ARM_GIC_V3_ACL=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=192
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=100
 CONFIG_SENSORS_SSC=y
 CONFIG_EXFAT_FS=y
 CONFIG_EXT4_FS=y
