dts: xiaomi: msm8998: Add ft8716 panel
Change-Id: I43cba7f28f9d5d6c2643486e92ddeb68cd9ad1c0

--- a/arch/arm/boot/dts/qcom/xiaomi/chiron-msm8998-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/xiaomi/chiron-msm8998-mtp.dtsi
@@ -389,6 +389,10 @@
 	qcom,panel-supply-entries = <&dsi_panel_pwr_supply_jdi_nt35596s>;
 };
 
+&dsi_ebbg_fhd_ft8716_video {
+	qcom,panel-supply-entries = <&dsi_panel_pwr_supply_ebbg_ft8716>;
+};
+
 &mem_client_3_size {
 	qcom,peripheral-size = <0x500000>;
 };
