{chiron,sagit}_defconfig: Switch zRAM compression alg to Zstandard
Signed-off-by: iusmac <iusico.maxim@libero.it>
Change-Id: Ie38ed2e53b2e298419d582af5c55068eb991da98

--- a/arch/arm64/configs/chiron_defconfig
+++ b/arch/arm64/configs/chiron_defconfig
@@ -255,7 +255,7 @@ CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_DMA_CMA=y
 # CONFIG_PNP_DEBUG_MESSAGES is not set
 CONFIG_ZRAM=y
-CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="lz4"
+CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="zstd"
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
@@ -703,6 +703,7 @@ CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_SHA512=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZ4=y
+CONFIG_CRYPTO_ZSTD=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
