dts: xiaomi: msm8998: Update chiron synaptics touch from sagit-p-oss
* This fixes null pointer assignment on certain devices

Change-Id: If81d319f4607cbcabb1e27bc66851dcaa78243ec
Signed-off-by: Nanhumly <admin@warbler.cc>

--- a/arch/arm/boot/dts/qcom/xiaomi/chiron-msm8998-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/xiaomi/chiron-msm8998-mtp.dtsi
@@ -258,6 +258,32 @@
 			synaptics,tp-id = /bits/ 8 <0x31>;
 			synaptics,fw-name = "synaptics_jdi_3330_chiron.fw";
 		};
+
+		synaptics,cfg_2 {
+			synaptics,chip-id = <1>;
+			synaptics,chip-id-name = "S3331";
+			synaptics,tp-id = /bits/ 8 <0x31>;
+		};
+
+		synaptics,cfg_3 {
+			synaptics,chip-id = <2>;
+			synaptics,chip-id-name = "TD4322";
+			synaptics,chip-is-tddi;
+
+			synaptics,disp-pre-on-sleep = <10>;
+			synaptics,disp-post-on-sleep = <10>;
+			synaptics,disp-pre-off-sleep = <10>;
+			synaptics,disp-post-off-sleep = <0>;
+			synaptics,lab-pre-on-sleep = <0>;
+			synaptics,lab-post-on-sleep = <10>;
+			synaptics,lab-pre-off-sleep = <10>;
+			synaptics,lab-post-off-sleep = <0>;
+			synaptics,ibb-pre-on-sleep = <0>;
+			synaptics,ibb-post-on-sleep = <10>;
+			synaptics,ibb-pre-off-sleep = <10>;
+			synaptics,ibb-post-off-sleep = <0>;
+			synaptics,tp-id = /bits/ 8 <0x34>;
+		};
 	};
 
 	ft5x46_i2c@38 {
